browser-extension/crates/core/tests/snapshots/approved_test__extractor_approved@text_density_fallback.input.html.snap
---
source: crates/core/tests/approved_test.rs
expression: extracted
input_file: crates/core/tests/testdata/html/text_density_fallback.input.html
---
{
  "title": "",
  "sections": [
    {
      "kind": "paragraph",
      "text": "This is a very long paragraph with substantial content that should be detected as the main content area by the text density heuristic because it contains more text than the navigation bar above.",
      "depth": null,
      "selector": "p"
    },
    {
      "kind": "paragraph",
      "text": "Another substantial paragraph with meaningful content that adds to the overall text density of this container element.",
      "depth": null,
      "selector": "p"
    },
    {
      "kind": "paragraph",
      "text": "A third paragraph further reinforcing that this div is the real content area of the page and should be the extraction root.",
      "depth": null,
      "selector": "p"
    }
  ],
  "metadata": {
    "og_title": null,
    "og_description": null,
    "lang": null,
    "canonical_url": null
  }
}
