browser-extension/crates/core/tests/snapshots/approved_test__extractor_approved@wikipedia_article.input.html.snap
---
source: crates/core/tests/approved_test.rs
expression: extracted
input_file: crates/core/tests/testdata/html/wikipedia_article.input.html
---
{
  "title": "Rust (programming language) - Wikipedia",
  "sections": [
    {
      "kind": "heading",
      "text": "Rust (programming language)",
      "depth": 1,
      "selector": "h1"
    },
    {
      "kind": "table",
      "text": "| Rust |\n|---|\n| Designed by | Graydon Hoare |\n| First appeared | July 7, 2010; 13 years ago [1] |",
      "depth": null,
      "selector": "table"
    },
    {
      "kind": "paragraph",
      "text": "Rust is a multi-paradigm , general-purpose programming language that emphasizes performance, type safety, and concurrency . It enforces memory safety—meaning that all references point to valid memory—without a traditional garbage collector .",
      "depth": null,
      "selector": "p"
    },
    {
      "kind": "heading",
      "text": "Contents",
      "depth": 2,
      "selector": "h2"
    },
    {
      "kind": "list",
      "text": "- 1 History\n- 2 Syntax",
      "depth": null,
      "selector": "ul"
    },
    {
      "kind": "heading",
      "text": "History",
      "depth": 2,
      "selector": "h2"
    },
    {
      "kind": "paragraph",
      "text": "The language grew out of a personal project begun in 2006 by Mozilla employee Graydon Hoare. [8]",
      "depth": null,
      "selector": "p"
    },
    {
      "kind": "heading",
      "text": "Syntax",
      "depth": 2,
      "selector": "h2"
    },
    {
      "kind": "paragraph",
      "text": "Here is a simple \"Hello, World!\" program in Rust:",
      "depth": null,
      "selector": "p"
    },
    {
      "kind": "code_block",
      "text": "fn main() { println!(\"Hello, World!\"); }",
      "depth": null,
      "selector": "pre"
    }
  ],
  "metadata": {
    "og_title": null,
    "og_description": null,
    "lang": "en",
    "canonical_url": null
  }
}
